Fix wrapper overflow

--- a/stylesheets/scss/base/_globals.scss
+++ b/stylesheets/scss/base/_globals.scss
@@ -101,6 +101,7 @@ hr {
     max-width: 1368px;
     margin: 0 auto;
     background: #f6f6f6;
+    overflow: hidden;
 }
 
 img {
