--- a/stylesheets/scss/layout/_forms.scss
+++ b/stylesheets/scss/layout/_forms.scss
@@ -9,6 +9,7 @@ input:not([type='submit']):not([type='hidden']), textarea, select {
     border: 1px solid $color__gray;
     transition: all .3s ease;
     &:focus {
+        color: #222 !important;
         border: 1px solid $color__primary;
     }
 }
